environments/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: Project for production environment of product catalog application
    openshift.io/display-name:  Product Catalog Prod
  name: product-catalog-prod
