environments/overlays/prod/cicd-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-namespace-cicd
spec:
  podSelector:
    matchLabels:
      name: server
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: product-catalog-cicd
    ports:
      - protocol: TCP
        port: 8080
  policyTypes:
    - Ingress
